[gd_scene load_steps=4 format=3 uid="uid://bfykqm448qllb"]

[ext_resource type="Script" path="res://start_menu/startmenu.gd" id="1_1a6te"]
[ext_resource type="PackedScene" uid="uid://310650vo12fr" path="res://player/player_immoblie.tscn" id="9_np2n1"]
[ext_resource type="AudioStream" uid="uid://p1lur1k0r2v5" path="res://music/Chris Christodoulou - Risk of Rain [2023 Remaster] ï½œ ROR Returns (2023) [g8iP1TwEB88].wav" id="10_8agby"]

[node name="startmenu" type="Node2D" groups=["start menu"]]
process_mode = 3
script = ExtResource("1_1a6te")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="start_button" type="Button" parent="CanvasLayer"]
offset_left = 850.0
offset_top = 545.0
offset_right = 1110.0
offset_bottom = 625.0
text = "Start Game"

[node name="levels" type="Button" parent="CanvasLayer"]
offset_left = 1266.0
offset_top = 549.0
offset_right = 1526.0
offset_bottom = 629.0
text = "Levels"

[node name="Panel" type="Panel" parent="CanvasLayer/levels"]
visible = false
layout_mode = 0
offset_left = -1181.0
offset_top = -484.0
offset_right = 600.0
offset_bottom = -61.0

[node name="level" type="Button" parent="CanvasLayer/levels/Panel"]
layout_mode = 0
offset_left = 764.0
offset_top = 5.0
offset_right = 1164.0
offset_bottom = 205.0
theme_override_font_sizes/font_size = 100
text = "Level"

[node name="tutorial" type="Button" parent="CanvasLayer/levels/Panel"]
layout_mode = 0
offset_right = 400.0
offset_bottom = 200.0
theme_override_font_sizes/font_size = 100
text = "Tutorial"

[node name="level 1-1" type="Button" parent="CanvasLayer/levels/Panel"]
layout_mode = 0
offset_left = 1349.0
offset_right = 1781.0
offset_bottom = 200.0
theme_override_font_sizes/font_size = 100
text = "Level 1-1"

[node name="playground" type="Button" parent="CanvasLayer"]
offset_left = 913.0
offset_top = 865.0
offset_right = 1010.0
offset_bottom = 896.0
text = "Playground"

[node name="quit_game_button" type="Button" parent="CanvasLayer"]
offset_left = 850.0
offset_top = 726.0
offset_right = 1110.0
offset_bottom = 786.0
text = "Quit Game"

[node name="settings_button" type="Button" parent="CanvasLayer"]
offset_left = 851.0
offset_top = 635.0
offset_right = 1111.0
offset_bottom = 716.0
text = "Settings"

[node name="Panel" type="Panel" parent="CanvasLayer/settings_button"]
visible = false
layout_mode = 0
offset_left = -665.0
offset_top = -486.0
offset_right = 913.0
offset_bottom = 306.0

[node name="close_button" type="Button" parent="CanvasLayer/settings_button/Panel"]
layout_mode = 0
offset_left = 1468.0
offset_right = 1578.0
offset_bottom = 63.0
theme_override_font_sizes/font_size = 40
text = "Close"

[node name="Label" type="Label" parent="CanvasLayer/settings_button/Panel"]
layout_mode = 0
offset_left = 321.0
offset_top = 2.0
offset_right = 405.0
offset_bottom = 44.0
theme_override_font_sizes/font_size = 30
text = "Audio"

[node name="HSlider" type="HSlider" parent="CanvasLayer/settings_button/Panel"]
layout_mode = 0
offset_top = 19.0
offset_right = 739.0
offset_bottom = 129.0
max_value = 2.0
step = 0.001

[node name="TextEdit" type="TextEdit" parent="."]
offset_left = 743.0
offset_top = 268.0
offset_right = 1921.0
offset_bottom = 429.0
theme_override_colors/background_color = Color(0, 0, 0, 1)
theme_override_colors/font_readonly_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 100
text = "Volatility"
editable = false
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false

[node name="TextEdit3" type="TextEdit" parent="."]
visible = false
offset_left = 936.0
offset_top = 389.0
offset_right = 1100.0
offset_bottom = 520.0
theme_override_colors/background_color = Color(0, 0, 0, 1)
theme_override_colors/font_readonly_color = Color(1, 1, 1, 1)
text = "by Choi"
editable = false
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false

[node name="TextEdit2" type="TextEdit" parent="."]
offset_left = 812.0
offset_top = 305.0
offset_right = 871.0
offset_bottom = 389.0
theme_override_colors/background_color = Color(0, 0, 0, 1)
editable = false
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false

[node name="Node2D" parent="." instance=ExtResource("9_np2n1")]
position = Vector2(843, 354)

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_8agby")
volume_db = -20.0

[connection signal="pressed" from="CanvasLayer/start_button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CanvasLayer/levels" to="." method="_on_levels_pressed"]
[connection signal="pressed" from="CanvasLayer/levels/Panel/level" to="." method="_on_level_pressed"]
[connection signal="pressed" from="CanvasLayer/levels/Panel/tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="CanvasLayer/levels/Panel/level 1-1" to="." method="_on_level_11_pressed"]
[connection signal="pressed" from="CanvasLayer/playground" to="." method="_on_playground_pressed"]
[connection signal="pressed" from="CanvasLayer/quit_game_button" to="." method="_on_quit_game_button_pressed"]
[connection signal="pressed" from="CanvasLayer/settings_button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="CanvasLayer/settings_button/Panel/close_button" to="." method="_on_close_button_pressed"]
[connection signal="drag_ended" from="CanvasLayer/settings_button/Panel/HSlider" to="." method="_on_h_slider_drag_ended"]
[connection signal="value_changed" from="CanvasLayer/settings_button/Panel/HSlider" to="." method="_on_h_slider_value_changed"]
